[package]
authors = ["Robin Nehls <git@manol.is>"]
edition = "2018"
name = "ascii-star"
version = "0.2.0"
[dependencies]
alto = "3"
clap = "2"
colored = "1.6"
env_logger = "0.4"
error-chain = "0.11"
gstreamer = "0.9"
glib = "0.4"
hyper = "0.10"
hyper-native-tls = "0.2"
log = "0.3"
pitch_calc = "0.11"
regex = "*"
termion = "1.5"

[dependencies.ultrastar-txt]
git = "https://github.com/Lordakius/ultrastar-txt.git"