[package]
authors = ["Robin Nehls <git@manol.is>"]
edition = "2018"
name = "ascii-star"
version = "0.2.0"
[dependencies]
alto = "3"
clap = "3"
colored = "2.0"
env_logger = "0.9"
error-chain = "0.12.4"
gstreamer = "0.17"
glib = "0.14" # Determined by gstreamer
log = "0.4"
pitch_calc = "0.12"
regex = "*"
termion = "1.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tempfile = "3.0"

[dependencies.ultrastar-txt]
git = "https://github.com/Lordakius/ultrastar-txt.git"
