[package]
authors = ["Robin Nehls <git@manol.is>"]
edition = "2021"
name = "ascii-star"
version = "0.2.0"

[dependencies]
alto = "3"
clap = "2"
colored = "1.6"
env_logger = "0.4"
error-chain = "0.11"
gstreamer = "0.15"
glib = "0.9"
log = "0.3"
pitch_calc = "0.11"
regex = "*"
termion = "1.5"
reqwest = "0.9"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tempfile = "3.0"

[dependencies.ultrastar-txt]
git = "https://github.com/Lordakius/ultrastar-txt.git"
